# nlsh

./: Cargo.toml  LICENSE  README.md  install.sh
.github/workflows/: release-nightly.yml
src/: main.rs
