[package]
name = "nlsh"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
dirs = "5.0.1"
reqwest = { version = "0.12.9", features = ["blocking", "json"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.120"
crossterm = "0.27.0"
